hphp/hack/test/typecheck/is_expression/this.php.exp
File "this.php", line 9, characters 26-27:
Invalid argument (Typing[4110])
File "this.php", line 9, characters 7-12:
Expected this
File "this.php", line 4, characters 31-35:
But got mixed
File "this.php", line 10, characters 24-25:
Invalid argument (Typing[4110])
File "this.php", line 10, characters 7-10:
Expected this
File "this.php", line 4, characters 31-35:
But got mixed
